recursion.logo.lessons.recursion.logo.koch.Crab.scala.error
Crab:4: error: ':' expected but ',' found.
def Krab(levels,length){
               ^Crab:23: error: identifier expected but '}' found.
}
^