recursion.logo.lessons.recursion.logo.koch.Crab.scala.code
def crab(levels:Int, length:Double) {
  Krab(levels,length)
}
def Krab(levels,length){
  if (levels==0){
    avance(length)
  }
  else {
    gauche(45)
    Krab(levels-1,length/(Math.sqrt(2)))
    
    droite(135)
    Krab(levels-1,length/(Math.sqrt(2)))
    
    gauche(45)
  }
}